<resources>
    <!-- App -->
    <string name="app_name" translatable="false">LsfPlan</string>

    <string name="title_activity_main">Lesson Plan</string>
    <string name="title_activity_web_selector" translatable="false">Download</string>
    <string name="title_activity_settings_activity_new">Settings</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3135430559590190/4069382066</string>

    <!-- Main -->
    <string name="action_setCalender" translatable="false">Download Plan</string>
    <string name="action_settings">Settings</string>
    <string name="main_noCalender">Calender is missing.\nPlease download a Lecture Plan via Menu -> Download Calender</string>

    <string name="main_lecture_day">Lectures for %s</string>
    <string name="main_lecture_change">Select to change</string>

    <string name="main_refresh_title">Refresh data</string>
    <string name="main_refresh_body" formatted="false">The stored data is older than four weeks.\nYou should consider to redownload it to have always a actual lecture plan.\n\nTip: If you don\'t want to see this, disable it at the settings.</string>
    <string name="main_button_reload" translatable="false">Download</string>
    <string name="main_button_no" translatable="false">Nope</string>


    <!-- Web -->
    <string name="webView_fileNotValid">File not valid!</string>
    <string name="webView_fileLoaded">Loaded File!</string>
    <string name="webView_HowTo">1. Navigate to the wanted lecture plan\n2. Click the calender export icon at the bottom of the page</string>
    <string name="webView_HowToStep3">3. The download will start after ~10 secs</string>
    <string name="webView_fileLoading">Download started\nPlease wait.</string>

    <!-- Settings -->
    <string name="pref_cat_general">General</string>
    <string name="pref_cat_notify">Notifications</string>
    <string name="pref_cat_credits" translatable="false">Credits</string>

    <string name="pref_title_enableNotifications">Enable Notifications</string>
    <string name="pref_description_enableNotifications">Show next lecture (room/time) as a notification</string>

    <string name="pref_title_info" translatable="false">Erstellt von Henry Strobel</string>
    <string name="pref_description_info" translatable="false">Version: </string>

    <string name="pref_title_timeSetter">When do you want to be notfied?</string>
    <string name="pref_description_timeSetter">%d Minutes before</string>

    <string name="pref_title_refresh">Outdated data warning</string>
    <string name="pref_description_refresh">You will get a warning message if the stored data is older than four weeks.</string>

    <string name="pref_description_ads">Support the developer</string>
    <string name="pref_title_ads">Enable Ads</string>

    <string name="pref_reset" translatable="false">Reset app</string>

    <string name="pref_soundMode">Notification Tone</string>
    <string name="pref_soundMode_default" translatable="false">Vibrate</string>

    <string name="pref_soundMode_Silent">Silent</string>
    <string name="pref_soundMode_Vib">Vibrate</string>
    <string name="pref_soundMode_Sound">Sound</string>
    <string-array name="pref_soundMode_entries">
        <item>@string/pref_soundMode_Silent</item>
        <item>@string/pref_soundMode_Vib</item>
        <item>@string/pref_soundMode_Sound</item>
    </string-array>
    <string-array name="pref_soundMode_values">
        <item>Silent</item>
        <item>Vibrate</item>
        <item>Sound</item>
    </string-array>


    <!-- Misc -->
    <string name="notification_title">Next lecture</string>
    <string name="notification_long" formatted="false">Topic: %s - </string>
    <string name="notification_short" formatted="false"> Time: %tR to %tR - Room: %s</string>
    <string name="icon_content_description" translatable="false">Desc</string>
    <string name="pref_github_info" translatable="false">Code on Github</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_html_web_selector">HtmlWebSelector</string>


</resources>
